fix java.lang.reflect.InaccessibleObjectException
configure needed add-opens.